<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/content"
        android:layout_width="335dp"
        android:layout_height="276dp"
        android:background="@drawable/content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:cardCornerRadius="20dp"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/tvNamaRek"
                android:layout_width="305dp"
                android:layout_height="68dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_input_"
                android:visibility="invisible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvIkon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardCornerRadius="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/vektor_5"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>



                    <LinearLayout
                        android:id="@+id/cv_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        app:layout_constraintStart_toEndOf="@id/cvIkon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtRekening"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No Rekening"
                            android:textColor="@color/white"
                            android:paddingLeft="10dp"
                            android:paddingTop="13dp"
                            />
                        <TextView
                            android:id="@+id/txtUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nama User"
                            android:textColor="@color/white"
                            android:paddingLeft="10dp" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnX"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@color/white"
                        app:layout_constraintStart_toEndOf="@id/cv_txt"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginLeft="100dp"
                        app:cardCornerRadius="100dp"
                        android:clickable="true">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/vector_4"/>
                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_input1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/username" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_"
                app:layout_constraintVertical_bias="0.147"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#2f82ff"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_input1"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:hint="@string/password" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="305dp"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:clickable="false"
                android:clipToOutline="true"
                android:elevation="10dp"
                android:enabled="false"
                android:text="Masuk"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_password"
                app:layout_constraintVertical_bias="0.419" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/lupa"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/button"
        android:textAppearance="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/floatingActionButton"
        app:layout_constraintVertical_bias="0.250"
        tools:layout_editor_absoluteY="547dp" />

    <LinearLayout
        android:id="@+id/bawah"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lupa"
        app:layout_constraintBottom_toTopOf="@id/pt_bank_sep"
        app:layout_constraintVertical_bias="0.850">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/image80" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/image81" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/image82" />

    </LinearLayout>

    <TextView
        android:id="@+id/pt_bank_sep"
        android:layout_width="335dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/pt_bank_sep"
        android:textAppearance="@style/pt_bank_sep"
        android:translationY="-0.31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        tools:layout_editor_absoluteY="674dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="150dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:srcCompat="@drawable/vektor_3"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="400dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <TextView

        android:id="@+id/silahkan_ma"
        android:layout_width="335dp"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/silahkan_ma"
        android:textAppearance="@style/silahkan_ma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintTop_toTopOf="@id/login"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/login"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="670dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>